Small change to shortcuts

--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,5 +1,15 @@
+Realtime subnote
+
+bw & amp calculations in initfilterbank/initfilter can be copied out to new routine.
+
+In normal sync apply if changed. Later add interpolation.
+Hmmm, looks like we need to do the whole filterbank :(
+Need to find out how long it takes!
+
+Approx 4uS, but it's not as simple as that :(
+
 Edit button
-+1 to 8 open addsynth voice window
++1 to 8 open addsynth voice window - could be 'interesting' :(
 
 Unchecking volume in controllers works correctly but still changes the GUI controls :(
 
