--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.6 M
 
+2018-3-2 Will
+* Small change to shortcuts.
+
 2018-2-28 Will
 * Implemented defaults for part author and copyright.
   Normal left button loads, Ctrl + left button saves.
