--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-3-3 Will
+* Quieted some unused code till it's developed.
+* Small improvements to Add and Pad GUIs.
+
 2018-3-2 Will
 * Small change to shortcuts.
 * Added entry point for dynamic subnote harmonic change.
