--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.6 M
 
+2018-3-10 Will
+* Reverted incorrect change to DynamicTooltip.cpp
+* Renamed overloaded show( to dynshow(
+
 2018-3-9 Will
 * Refined Window title names.
 * GUI correct when MIDI volume and expression disabled.
