--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,11 @@
-yoshimi 1.5.6 M
+yoshimi 1.5.7 rc1
 
 2018-3-10 Will
 * Reverted incorrect change to DynamicTooltip.cpp
 * Renamed overloaded show( to dynshow(
 * Completely revised copyFile( function.
+* All part areas now show kit status, number and names.
+* Set version as 1.5.7 rc1
 
 2018-3-9 Will
 * Refined Window title names.
