--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -5,6 +5,8 @@ Edit button
 
 Requested: auto 'apply' timer for padsynth.
 
+scales not reporting damaged files :(
+
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered when 'foreign' entries appear from outside Yoshimi.
 
 Bug! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well or better still loop back to try alsa.
