--- a/Changelog
+++ b/Changelog
@@ -1,28 +1,34 @@
 yoshimi 1.5.7 rc5
 
-2013-3-18 Will
+2018-3-19 Will
+* Corrected dates again :(
+* Improved Add, Sub, Pad click response when not enabled.
+* Changed 'Mod. Oscilator' to 'Local Oscillator'.
+* Updated docs.
+
+2018-3-18 Will
 * Improved scales error checking.
 * Improved instrument renaming.
 * Set version as 1.5.7 rc5
 
-2013-3-17 Will
+2018-3-17 Will
 * Improved detection of user guide.
 * Code cleanups - Compiler warning suppression.
 * New 1.5.7 features list added to doc.
 * Remaining warnings suppressed.
 
-2013-3-16 Will
+2018-3-16 Will
 * Implemented Tabbed AddSynth Voices.
 * Changed layout as workround for bottom edge bug.
   Needs sorting for contol knobs anywhere :(
 * Set version as 1.5.7 rc4
 
-2013-3-12 Will
+2018-3-12 Will
 * Bugfix: Ext voice and modulators editing wrong.
   GUI still not completely correct - never was!
 * Set version as 1.5.7 rc3
 
-2013-3-11 Will
+2018-3-11 Will
 * Fixed regression. AddVoice modulator not changing.
 * Clarified GUI voice and modulator selection.
 * Set version as 1.5.7 rc2
