Final Updates Manual import and update Doc updates Set release version as 1.5.7

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-yoshimi 1.5.7 rc5
+yoshimi 1.5.7
+
+2018-3021 Will
+* Final Updates.
+* Manual import and update.
+* Doc updates.
+* Set release version as 1.5.7
 
 2018-3-19 Will
 * Corrected dates again :(
