--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.7 M
 
+2018-4-22 Will
+* 'autoInstance' disabled by default, set in config.
+* Default state files handled correctly.
+
 2018-4-19 Will
 * Second attempt at autoloading :(
 * Corrected changelog.
