--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,3 +1,5 @@
+Regression: yoshimi no longer sets ALSA buffer size :(
+
 Realtime subnote
 
 Zero-cross for note off.
@@ -43,8 +45,6 @@ Consider enabling and disabling tooltips.
 
 Make attempt to start second independent instance open a new one in running yoshimi instead - saves memory and more consistent.
 Also, add CLI command to start new instance from within running Yoshimi
-
-Possible single state file (for standalone) including all currently open instances,
 
 RPNs (channel based)
 
