--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.7 M
 2018-4-22 Will
 * 'autoInstance' disabled by default, set in config.
 * Default state files handled correctly.
+* BugFix: Build 1287 had broken LV2 :(
 
 2018-4-19 Will
 * Second attempt at autoloading :(
