--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@ yoshimi 1.5.7 M
 * Added error checking and limits to scales (microtonal).
 * Enabled MIDI-learn for some scales settings.
 * Doc updates and corrections.
+* Added highlights to learnable controls.
 
 2018-4-22 Will
 * 'autoInstance' disabled by default, set in config.
