--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.7 M
 
+2018-5-1 Will
+* Improved CLI handling of instances.
+
 2018-4-29 Will
 * CLI can now close instances.
 * Minor improvements to CLI instance controls.
