--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.7 M
 
+2018-5-9 Will
+* BugFix: GUI swap instrument with bank now ignored.
+  Would segfault previously.
+* Preparing for universal instrument swaps.
+  From any root/bank to any root/bank :)
+
 2018-5-7 Will
 * Non relevant GUI settings now deactivated for LV2.
 
