Changed Solo choice name 'Recoil' to 'TwoWay' Reduced debounce time to 60mS Improved CLI reporting

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.7 M
 
+2018-5-17 Will
+* Changed Solo choice name 'Recoil' to 'TwoWay'.
+* Reduced debounce time to 60mS.
+* Improved CLI reporting.
+
 2018-5-11 Will
 * Completed universal instrument swaps.
 * Partially updated docs.
