--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.7 M
 
+2018-5-18 Will
+* Implemented universal bank swaps.
+* Banks no longer private to SynthEngine.
+  Too much access from Interchange needed and was
+  getting silly always routing via SynthEngine!
+* Updated docs.
+
 2018-5-17 Will
 * Changed Solo choice name 'Recoil' to 'TwoWay'.
 * Reduced debounce time to 60mS.
