--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.8 rc1
 
+2018-5-19 Will
+* Cleaned up 'solo' interaction between CLI & GUI.
+
 2018-5-18 Will
 * Implemented universal bank swaps.
 * Banks no longer private to SynthEngine.
