--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.5.8
+yoshimi 1.5.8 M
+
+2018-5-31 Will
+* Corrected GUI handling of part saves.
+  Also improved label colour handling.
+* Corrected Evnelope freemode delete point.
 
 2018-5-28 Will
 * Changed lstat to stat in MiscFuncs.cpp
