Bugfix: Wasn't reloading solo-twoway Formalised manual search and opening

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.8 M
 
+2018-6-11 Will
+* Bugfix: Wasn't reloading solo-twoway.
+  Saved OK, but reloaded as loop.
+* Formalised manual search and opening.
+  GUI now only calls via command block.
+  
+
 2018-6-5 Will
 * BugFix: Clearing kitmode key ranges was resetting.
 * BugFix: Bank renaming now working across roots.
