implimented 'zread' CLI test for command structure

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.8 M
 
+2018-6-13 Will
+* *implimented 'zread' CLI test for command structure.
+
 2018-6-11 Will
 * Bugfix: Wasn't reloading solo-twoway.
   Saved OK, but reloaded as loop.
