--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.8 M
 
+2018-6-21 Will
+* Instruments can now be swapped between banks and roots.
+* Small doc updates.
+
 2018-6-13 Will
 * Small optimisation in 'zread'.
   Also shortened read loop usleep time to 10uS.
