--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,7 @@ yoshimi 1.5.8 M
 2018-6-23 Will
 * Added engines to globals.h
 * Further work on Interchange.cpp
-* CLI Part level mostly converted.
+* Part level mostly converted to CLI.
 
 2018-6-22 Will
 * Moved CommandBlock from MiscFuncs'.h to globals.h
@@ -11,6 +11,7 @@ yoshimi 1.5.8 M
   Converted actual commands in Interchange.cpp
 * Implimented small optimisation for reads.
 * Minor doc updates.
+* Completed part controls move in  Interchange.cpp
 
 2018-6-21 Will
 * Instruments can now be swapped between banks and roots.
