GUI config controls converted to enum Defined 'insert' enums, and converted all occurrences

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.5.8 M
 
+2018-6-29 Will
+* GUI config controls converted to enum.
+* Defined 'insert' enums, and converted all occurrences.
+
 2018-6-25 Will
 * BugFix: GUI mixer controls not setting part window.
 * Forgot section changes in resolveReplies.
