Added further missing enum conversions in 'interchange' Implemented control routes as enums

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.8 M
 
 2018-6-30 Will
 * Added some missing enum conversions in 'interchange'.
+* Implemented control routes as enums.
 
 2018-6-29 Will
 * GUI config controls converted to enum.
