--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,4 +1,12 @@
 
+Potential Bug: Chanign part name while aplaymidi running with yoshi sometimes segfaults with:
+    The futex facility returned an unexpected error code.Aborted
+
+Can go a long time before showing up :(
+
+Doesn't seem to happen with other MIDI sources, nor with V1.5.3
+ (part number follows instrument loads after this version)
+
 BUG! Multi instances produce jack errors if have been opened when main instance closed - been there since V 1.4.1 :(
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
