Converted main controls to enums

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.8 M
 
 2018-7-1 Will
 * Caught more missing conversions :(
+* Converted main controls to enums.
 
 2018-6-30 Will
 * Added some missing enum conversions in 'interchange'.
