--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.8 M
 
+2018-7-2 Will
+* Restored fade/mute/loopback to full isolation.
+  Had forgotten about this :(
+* Changed ring buffer 'toCLI' to 'decodeLoopback'.
+  Makes it more obvious what going on.
+
 2018-7-1 Will
 * Caught more missing conversions :(
 * Converted main controls to enums.
