--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.5.8 M
 2018-7-20 Will
 * Completed vector GUI enum updates.
 * Updated docs and images.
+* BugFix: scales CLI keymap entry wrong controls.
+* Started enum conversion of scales.
 
 2018-7-10 Will
 * Corrected GUI Vector/Part/Mixer/Bank anomaly.
