--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.5.8 M
 
 2018-7-21 Will
 * Completed scales enum conversion.
+* Converted subSynth controls to enums.
 
 2018-7-20 Will
 * Completed vector GUI enum updates.
