Converted padSynth controls to enums

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.8 M
 2018-7-21 Will
 * Completed scales enum conversion.
 * Converted subSynth controls to enums.
+* Converted padSynth controls to enums.
 
 2018-7-20 Will
 * Completed vector GUI enum updates.
