--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.8 M
 2018-7-24 Will
 * Revised enum namespace terminology.
   No intrinsic code changes.
+* Converted resonance controls to enums.
 
 2018-7-23 Will
 * Converted oscillator controls to enums.
