--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.8 M
 * Revised enum namespace terminology.
   No intrinsic code changes.
 * Converted resonance controls to enums.
+* Converted LFO controls to enums.
 
 2018-7-23 Will
 * Converted oscillator controls to enums.
