--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 1.5.8 M
 
 2018-7-26 Will
+* Converted effect type controls to enums.
+  More work needed :(
+
+2018-7-26 Will
 * Converted envelope controls to enums.
 
 2018-7-25 Will
