More work on Limits

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.8 M
 
+2018-7-29 Will
+* More work on Limits.
+
 2018-7-28 Will
 * Cleaned up some missing conversions.
   Also corrected previous date!
