--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.5.8 M
 
 2018-7-29 Will
 * More work on Limits.
+* Converted limits error checks.
+* Updated limits doc.
 
 2018-7-28 Will
 * Cleaned up some missing conversions.
