SUBnoteUI.fl converted to enums

--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.5.8 M
 * ADnoteUI.fl converted to enums.
 * More clarifcations in MiscGui.cpp
   Also found more missing conversions :(
+* SUBnoteUI.fl converted to enums.
 
 2018-8-1 Will
 * Partly implemented envelope limits.
