--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.5.8 M
 
+2018-8-5 Will
+* Updated addSynth limits.
+* Updated padsynth limits.
+* Updated subSynth limits.
+* Updated controller limits
+
 2018-8-4 Will
 * BugFix: MIDI-learn Cancel.
   It was only pretending to :(
