Found more missing conversions

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.5.8 M
 
+2018-8-6 Will
+* Found more missing conversions :(
+
 2018-8-5 Will
 * Updated addSynth limits.
 * Updated padsynth limits.
