Added missing conversions in EffUI.fl

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.8 M
 2018-8-13 Will
 * Separated system and insert control names.
 * Updated docs.
+* Added missing conversions in EffUI.fl
 
 2018-8-12 Will
 * Reorganised and combined XML & history types.
