--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.5.8 M
 
+2018-8-16 Will
+* BugFix: CLI not setting some values
+  and not reading any :(
+* Started on CLI for reading min, max, default.
+
 2018-8-15 Will
 * All GUI default requests now set by limits.
   This is a major refactoring, considerably
