--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,13 @@
 yoshimi 1.5.8 M
 
+2018-8-17 Will
+* Implemented read most CLI min, max, default
+  for formally defined ones.
+* Implemented most CLI Mlearn initialisation
+  for formally defined ones.
+  Can't cancel from CLI though and non-learnable
+  ones appear to learn.
+
 2018-8-16 Will
 * BugFix: CLI not setting some values
   and not reading any :(
