--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.5.8 M
 2018-8-18 Will
 * Improved patch load behaviour crossing CLI / GUI.
 * Started work on CLI kitmode.
+* BugFix: Saving to bank not updating GUI.
 
 2018-8-17 Will
 * Implemented read most CLI min, max, default
