--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.5.8 M
 
+2018-8-19 Will
+* Added GUI warning when active part disabled.
+* Removed some redundant test code.
+
+2018-8-18 Rob
+* Initialise and freshen MasterUI->activePart.
+
 2018-8-18 Will
 * Improved patch load behaviour crossing CLI / GUI.
 * Started work on CLI kitmode.
